cdi scopes and di done